asignando el primer media query en 768px

--- a/css/app.css
+++ b/css/app.css
@@ -3,7 +3,7 @@ html{
     font-size: 62.5%; /* 1REM = 10px */
 }
 
-*, *::before *::after{
+*, *::before, *::after{
     box-sizing: inherit;
 }
 
@@ -16,19 +16,37 @@ body{
 /* GLOBALES */
 h1, h2, h3 {
     font-family: 'Playfair Display', serif;
-    margin: 0px 0px 5rem 0px;
+    margin: 0px 0px 2rem 0px;
 }
 
 h1{
-    font-size: 5rem;
+    font-size: 3.8rem;
+}
+
+@media ( min-width: 768px ){
+    h1{
+        font-size: 5rem;
+    }
 }
 
 h2 {
-    font-size: 4rem;
+    font-size: 3.2rem;
+}
+
+@media ( min-width: 768px ){
+    h2 {
+        font-size: 4rem;
+    }
 }
 
 h3{
-    font-size: 3rem;
+    font-size: 2.4rem;
+}
+
+@media ( min-width: 769px ){
+    h3{
+        font-size: 3rem;
+    }
 }
 
 a{
@@ -59,10 +77,17 @@ img{
     text-align: center;
     border: none;
     cursor: pointer;
+    width: 100%;
 }
 
 .btn:hover {
     background-color: #769c02;
+}
+
+@media ( min-width: 768px ){
+    .btn {
+        width: auto;
+    }
 }
 
 /* UTILIDADES */
@@ -70,8 +95,10 @@ img{
     text-align: center;
 }
 
-.max-width-30 {
-    max-width: 30rem;
+@media ( min-width: 768px ){
+    .max-width-30 {
+        max-width: 30rem;
+    }
 }
 
 /* HEADER Y NAVEGACION */
@@ -88,10 +115,18 @@ img{
     border-top: 0.1rem #e1e1e1 solid;
 }
 
-.nav-principal{
+.nav-principal {
     padding: 2rem 0px;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media ( min-width: 768px ){
+    .nav-principal {
+        justify-content: space-between;
+        flex-direction: row;
+    }
 }
 
 .hero {
@@ -99,13 +134,34 @@ img{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    height: 55rem;
+    height: 25rem;
+}
+
+@media ( min-width: 768px ){
+    .hero {
+        height: 55rem;
+    }
 }
 
 /* CATEGORIAS */
 .categorias{
-    padding-top: 5rem;
+    padding: 5rem 0;
 }
+
+.categoria {
+    margin-bottom: 2rem;
+}
+
+@media ( min-width: 768px ){
+    .categoria {
+        margin-bottom: 0px;
+    }
+}
+
+.categoria img {
+    width: 100%;
+}
+
 .categorias h2{
     text-align: center;
 }
@@ -123,43 +179,70 @@ img{
     border-bottom-right-radius: 1rem;
 }
 
-.listado-categorias {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 2rem;
+@media ( min-width: 768px ){
+    .listado-categorias {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;
+    }
 }
 
 /* SOBRE NOSOTROS */
+
 .sobre-nosotros{
     /* background-image: linear-gradient(to right, #000 50%, red 100%); */
-    background-image: linear-gradient(to right, transparent 50%, #037bc0 50%, #037bc0 100%), url("../img/nosotros.jpg");
-    background-position: left center;
-    padding: 10rem 0;
+    background-image: linear-gradient(to bottom, transparent 50%, #037bc0 50%, #037bc0 100%), url("../img/nosotros.jpg");
+    background-position: center, top left;
     background-repeat: no-repeat;
-    background-size: 100%, 128rem; /* Gradient,Imagen */
+    background-size: 100%, 70rem; /* Gradient,Imagen */
+}
+
+@media ( min-width: 768px ){
+    .sobre-nosotros{
+        background-image: linear-gradient(to right, transparent 50%, #037bc0 50%, #037bc0 100%), url("../img/nosotros.jpg");
+        background-position: left center;
+        padding: 10rem 0;
+        background-size: 100%, 160rem; /* Gradient,Imagen */
+    }
 }
 
 /* USANDO GRID */
-/* .sobre-nosotros-grid{ */
-/*     display: grid; */
-/*     grid-template-columns: repeat(2, 1fr); */
-/*     column-gap: 8rem; */
-/* } */
-
-/* .texto-nosotros{ */
-/*     grid-column: 2 / 3; */
-/* } */
-
 .sobre-nosotros-grid{
-    display: flex;
-    justify-content: flex-end;
-    padding-left: 10rem;
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+}
+
+@media ( min-width: 768px ){
+    .sobre-nosotros-grid{
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: unset;
+        column-gap: 8rem;
+    }
 }
 
 .texto-nosotros{
-    flex-basis: 50%;
+    grid-row: 2 / 3;
     color: #fff;
+    padding: 5rem;
 }
+
+@media ( min-width: 768px ){
+    .texto-nosotros{
+        grid-column: 2 / 3;
+    }
+}
+
+/* .sobre-nosotros-grid{ */
+/*     display: flex; */
+/*     justify-content: flex-end; */
+/*     padding-left: 10rem; */
+/* } */
+
+/* .texto-nosotros{ */
+/*     flex-basis: 50%; */
+/*     padding-left: 10rem; */
+/*     color: #fff; */
+/* } */
 
 /* LISTADO DE PRODUCTOS */
 /* NUESTRO PRODUCTOS */
@@ -168,55 +251,68 @@ img{
     padding-top: 5rem;
 }
 
-.listado-productos {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    column-gap: 2rem;
-    grid-row-gap: 2rem;
-}
+@media ( min-width: 768px ){
+    .listado-productos {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        column-gap: 2rem;
+        grid-row-gap: 2rem;
+    }
 
-.producto:nth-child(1){
-    grid-column: 1 / 7;
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-}
+    .producto:nth-child(1){
+        grid-column: 1 / 7;
+        display: grid;
+        grid-template-columns: 3fr 1fr;
+    }
 
-.producto:nth-child(1) img {
-    height: 54rem; /* 43rem */
-    /* height: 43rem; */
-    width: 100%;
-    object-fit: cover;
-}
+    .producto:nth-child(1) img {
+        height: 54rem; /* 43rem */
+        /* height: 43rem; */
+        width: 100%;
+        object-fit: cover;
+    }
 
-.producto:nth-child(2){
-    grid-column: 1 / 4;
-}
+    .producto:nth-child(2){
+        grid-column: 1 / 4;
+    }
 
-.producto:nth-child(2) img,
-.producto:nth-child(3) img {
-    height: 33rem;
-    width: 100%;
-    object-fit: cover;
-}
+    .producto:nth-child(2) img,
+    .producto:nth-child(3) img {
+        height: 33rem;
+        width: 100%;
+        object-fit: cover;
+    }
 
-.producto:nth-child(3){
-    grid-column: 4 / 7;
-}
+    .producto:nth-child(3){
+        grid-column: 4 / 7;
+    }
 
-.producto:nth-child(4){
-    grid-column: 1 / 3;
-}
+    .producto:nth-child(4){
+        grid-column: 1 / 3;
+    }
 
-.producto:nth-child(5){
-    grid-column: 3 / 5;
-}
+    .producto:nth-child(5){
+        grid-column: 3 / 5;
+    }
 
-.producto:nth-child(6){
-    grid-column: 5 / 7;
+    .producto:nth-child(6){
+        grid-column: 5 / 7;
+    }
 }
 
 .producto {
     background-color: #037bc0;
+    margin-bottom: 2rem;
+}
+
+@media ( min-width: 768px ){
+    .producto {
+        margin-bottom: 0px;
+    }
+}
+
+.producto:last-of-type {
+    margin-bottom: 0px;
 }
 
 .texto-producto {
@@ -247,27 +343,50 @@ img{
 
 .site-footer h3 {
     margin-bottom: 0.5rem;
+    text-align: center;
 }
 
-/* usando flex */
-/* .grid-footer { */
-/*     display: flex; */
-/*     gap: 2rem; */
-/* } */
+@media ( min-width: 768px ){
+    .site-footer h3 {
+        text-align: left;
+    }
 
-/* .grid-footer div { */
-/*     flex: 1; */
-/* } */
+    .grid-footer {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;
+    }
+    /* usando flex */
+    /* .grid-footer { */
+    /*     display: flex; */
+    /*     gap: 2rem; */
+    /* } */
 
-.grid-footer {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 2rem;
+    /* .grid-footer div { */
+    /*     flex: 1; */
+    /* } */
+}
+
+.grid-footer > div {
+    margin-bottom: 2rem;
+}
+
+@media ( min-width: 768px ){
+    .grid-footer > div {
+        margin-bottom: 0px;
+    }
 }
 
 
 .footer-menu a {
     display: block;
+    text-align: center;
+}
+
+@media ( min-width: 768px ){
+    .footer-menu a {
+        text-align: left;
+    }
 }
 
 .copyright {
@@ -280,7 +399,7 @@ img{
 .contenido-nosotros {
     display: grid;
     grid-template-columns: 1fr 2fr;
-    grid-template-columns: repeat(auto-fit, minmax( 25rem, 1fr ));
+    grid-template-columns: repeat(auto-fit, minmax( 39rem, 1fr ));
     column-gap: 4rem;
 }
 
@@ -288,30 +407,55 @@ img{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding: 5rem;
+}
+
+@media ( min-width: 768px ){
+    .informacion-nosotros{
+        padding: 0px 3rem;
+    }
 }
 
 /* PAGINA NUEVA SOBRE BLOG */
 /* BLOG */
 
-.contenedor-blog {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    column-gap: 4rem;
+@media ( min-width: 768px ){
+    .contenedor-blog {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        column-gap: 4rem;
+    }
 }
 
 .entrada {
     border-bottom: 2px #e1e1e1 solid;
-    padding-bottom: 4rem;
     margin-bottom: 2rem;
+    padding-bottom: 4rem;
+}
+
+.entrada h2 {
+    text-align: center;
+}
+
+@media ( min-width: 768px ){
+    .entrada h2 {
+        text-align: left;
+    }
+}
+
+.contenido-blog {
+    padding: 2rem;
 }
 
 .entrada:last-of-type {
     border: none;
 }
 
-.entrada-meta {
-    display: flex;
-    justify-content: space-between;
+@media ( min-width: 768px ){
+    .entrada-meta {
+        display: flex;
+        justify-content: space-between;
+    }
 }
 
 .entrada-meta p {
@@ -327,13 +471,21 @@ img{
     margin: 0px auto;
 }
 
+/* PAGINA GALERIA */
+
 .galeria {
     list-style: none;
     padding: 0px;
     margin: 0px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 2rem;
+}
+
+@media ( min-width: 768px ){
+    .galeria {
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
 
 .galeria img {
